--- a/src/main/resources/com/andre/dojo/invoicemanager/change-data-customer.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/change-data-customer.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -20,7 +19,7 @@
                <Image url="@icon/sun.png" />
             </image>
          </ImageView>
-         <Label fx:id="tombolOrganization" alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="39.0" prefWidth="157.0" text="Organization">
+         <Label fx:id="tombolOrganization" alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="39.0" prefWidth="157.0" text="Lettter">
             <font>
                <Font size="15.0" />
             </font>
@@ -34,50 +33,85 @@
    </AnchorPane>
    <Pane layoutY="77.0" prefHeight="613.0" prefWidth="978.0" styleClass="list-invoice">
          <children>
-            <TableView fx:id="tableViewCustomer" layoutX="17.0" layoutY="54.0" prefHeight="216.0" prefWidth="945.0">
+            <TableView fx:id="tableViewCustomer" layoutX="14.0" layoutY="66.0" prefHeight="297.0" prefWidth="951.0">
               <columns>
                 <TableColumn fx:id="tableColumnName" prefWidth="299.0" text="Name" />
-                <TableColumn fx:id="tableColumnDesc" prefWidth="330.0" text="Description" />
-                  <TableColumn fx:id="tableColumnPhone" prefWidth="300.0" text="Phone Number" />
+                <TableColumn fx:id="tableColumnDesc" prefWidth="292.0" text="Description" />
+                  <TableColumn fx:id="tableColumnPhone" prefWidth="273.0" text="Phone Number" />
+                  <TableColumn fx:id="tableColumnDelete" minWidth="0.0" prefWidth="81.0" text="Action" />
               </columns>
             </TableView>
-            <Label layoutX="17.0" layoutY="28.0" text="List Customer">
+            <Label layoutX="17.0" layoutY="374.0" text="Name :">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="23.0" layoutY="287.0" text="Name :">
+            <Label layoutX="17.0" layoutY="428.0" text="Description : ">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="23.0" layoutY="344.0" text="Description : ">
+            <Label layoutX="17.0" layoutY="486.0" text="Phone Number : ">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label layoutX="23.0" layoutY="396.0" text="Phone Number : ">
+            <TextField fx:id="name" layoutX="17.0" layoutY="392.0" prefHeight="25.0" prefWidth="500.0" styleClass="field-add-item" />
+            <TextField fx:id="desc" layoutX="17.0" layoutY="449.0" prefHeight="25.0" prefWidth="500.0" styleClass="field-add-item" />
+            <TextField fx:id="phone" layoutX="17.0" layoutY="507.0" prefHeight="25.0" prefWidth="500.0" styleClass="field-add-item" />
+            <Label fx:id="inv" layoutX="536.0" layoutY="374.0" text="Invoice Number :">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <TextField fx:id="name" layoutX="17.0" layoutY="307.0" prefHeight="25.0" prefWidth="500.0" />
-            <TextField fx:id="desc" layoutX="17.0" layoutY="364.0" prefHeight="25.0" prefWidth="500.0" />
-            <TextField fx:id="phone" layoutX="17.0" layoutY="416.0" prefHeight="25.0" prefWidth="500.0" />
-            <Label fx:id="inv" layoutX="536.0" layoutY="289.0" text="Invoice Number :">
+            <Label fx:id="no" layoutX="536.0" layoutY="396.0" text="hehe">
                <font>
-                  <Font size="14.0" />
+                  <Font size="15.0" />
                </font>
             </Label>
-            <Label fx:id="no" layoutX="536.0" layoutY="311.0" text="hehe">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Button fx:id="add" layoutX="19.0" layoutY="462.0" mnemonicParsing="false" text="Add Customer" />
-            <Button fx:id="update" layoutX="128.0" layoutY="462.0" mnemonicParsing="false" text="Update Customer" />
-            <Button layoutX="250.0" layoutY="462.0" mnemonicParsing="false" text="Delete Customer" />
-            <Button fx:id="reset" layoutX="367.0" layoutY="462.0" mnemonicParsing="false" text="Reset" />
+            <TextField layoutX="333.0" layoutY="14.0" prefHeight="39.0" prefWidth="313.0" promptText="Search..." styleClass="field-search" />
+            <Pane fx:id="add" layoutX="18.0" layoutY="557.0" prefHeight="42.0" prefWidth="79.0" styleClass="tombol-primary">
+               <children>
+                  <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icon/add-customer.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="33.0" text="Add">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="update" layoutX="203.0" layoutY="557.0" prefHeight="42.0" prefWidth="101.0" styleClass="tombol-primary">
+               <children>
+                  <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icon/edit-item.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="54.0" text="Update">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <Pane fx:id="reset" layoutX="108.0" layoutY="557.0" prefHeight="42.0" prefWidth="87.0" styleClass="tombol-primary">
+               <children>
+                  <ImageView fitHeight="21.0" fitWidth="25.0" layoutX="10.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icon/reset.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="45.0" text="Reset">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
          </children></Pane>
 </children>
 </AnchorPane>
