--- a/src/main/resources/com/andre/dojo/invoicemanager/export-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/export-view.fxml
@@ -32,18 +32,11 @@
                     <Font size="18.0" />
                 </font>
             </Label>
-            <TableView fx:id="tableViewInvoice" layoutX="14.0" layoutY="49.0" minHeight="290.0" prefHeight="496.0" prefWidth="951.0">
-                <columns>
-                    <TableColumn fx:id="tableColumnCode" prefWidth="272.0" text="Invoice Code" />
-                    <TableColumn fx:id="tableColumnDescription" prefWidth="374.0" text="Customer" />
-                    <TableColumn fx:id="tableColumnCustomer" prefWidth="274.0" text="Total Item" />
-                </columns>
-            </TableView>
             <Pane fx:id="tombolExport11" layoutX="810.0" layoutY="557.0" prefHeight="42.0" prefWidth="154.0" styleClass="tombol-primary">
                 <children>
                     <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@icon/image-down.png" />
+                            <Image url="@icon/toPDF.png" />
                         </image>
                     </ImageView>
                     <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="114.0" text="Export Now!">
@@ -58,6 +51,14 @@
                   <Font size="18.0" />
                </font>
             </Label>
+            <TableView fx:id="tableViewExport" layoutX="13.0" layoutY="62.0" minHeight="467.0" prefHeight="489.0" prefWidth="952.0">
+               <columns>
+                  <TableColumn fx:id="tableColumnCode" prefWidth="203.0" text="Invoice Code" />
+                  <TableColumn fx:id="tableColumnDesc" prefWidth="334.0" text="Description" />
+                  <TableColumn fx:id="tableColumnCustomer" prefWidth="279.0" text="Customer" />
+                  <TableColumn fx:id="tableColumnTotalItem" prefWidth="279.0" text="Total Item" />
+               </columns>
+            </TableView>
         </children>
     </Pane>
 </children>
