--- a/src/main/resources/com/andre/dojo/invoicemanager/export-prepare-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/export-prepare-view.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPaneMain" prefHeight="691.0" prefWidth="978.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.ExportController">
+<AnchorPane fx:id="anchorPaneMain" prefHeight="691.0" prefWidth="978.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.ExportPrepareController">
 <children>
     <AnchorPane prefHeight="64.0" prefWidth="978.0" styleClass="top-panel">
         <children>
@@ -18,12 +18,12 @@
                     <Image url="@icon/sun.png" />
                 </image>
             </ImageView>
-            <Label fx:id="prepare" alignment="CENTER" layoutX="21.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" text="Prepare">
+            <Label fx:id="tombolPrepare" alignment="CENTER" layoutX="21.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" styleClass="top-label-active" text="Prepare">
                 <font>
                     <Font size="15.0" />
                 </font>
             </Label>
-            <Label fx:id="tombolHistory1" alignment="CENTER" layoutX="157.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" styleClass="top-label-active" text="Export">
+            <Label fx:id="tombolExport" alignment="CENTER" layoutX="157.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" text="Export">
                <font>
                   <Font size="15.0" />
                </font>
@@ -32,34 +32,29 @@
     </AnchorPane>
     <Pane layoutY="77.0" prefHeight="613.0" prefWidth="978.0" styleClass="list-invoice">
         <children>
-            <Label layoutX="14.0" layoutY="15.0" prefHeight="27.0" prefWidth="154.0" text="Total Customer : ">
-                <font>
-                    <Font size="18.0" />
-                </font>
-            </Label>
-            <Pane fx:id="export" layoutX="810.0" layoutY="557.0" prefHeight="42.0" prefWidth="154.0" styleClass="tombol-primary">
+            <Pane fx:id="generate" layoutX="810.0" layoutY="557.0" prefHeight="42.0" prefWidth="154.0" styleClass="tombol-primary">
                 <children>
                     <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
                         <image>
-                            <Image url="@icon/toPDF.png" />
+                            <Image url="@icon/image-down.png" />
                         </image>
                     </ImageView>
-                    <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="114.0" text="Export Now!">
+                    <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="114.0" text="Generate Now!">
                         <font>
                             <Font size="15.0" />
                         </font>
                     </Label>
                 </children>
             </Pane>
-            <TableView fx:id="tableViewExport" layoutX="13.0" layoutY="62.0" minHeight="467.0" prefHeight="489.0" prefWidth="952.0">
+            <TableView fx:id="tableViewPrepare" layoutX="13.0" layoutY="62.0" minHeight="467.0" prefHeight="489.0" prefWidth="952.0">
                <columns>
-                  <TableColumn fx:id="tableColumnCode" prefWidth="203.0" text="Invoice Code" />
-                  <TableColumn fx:id="tableColumnDesc" prefWidth="334.0" text="Description" />
-                  <TableColumn fx:id="tableColumnCustomer" prefWidth="279.0" text="Customer" />
-                  <TableColumn fx:id="tableColumnTotalItem" prefWidth="279.0" text="Status" />
+                  <TableColumn fx:id="tableColumnCheckbox" prefWidth="93.0" text="Choose!" />
+                  <TableColumn fx:id="tableColumnCode" prefWidth="226.0" text="Invoice Code" />
+                  <TableColumn fx:id="tableColumnDescription" prefWidth="320.0" text="Description" />
+                  <TableColumn fx:id="tableColumnCustomer" prefWidth="456.0" text="Customer" />
                </columns>
             </TableView>
-            <Label fx:id="total" layoutX="154.0" layoutY="15.0" prefHeight="27.0" prefWidth="74.0" text="0">
+            <Label layoutX="14.0" layoutY="18.0" text="Invoice for this month is ready to generate.">
                <font>
                   <Font size="18.0" />
                </font>
