--- a/src/main/resources/com/andre/dojo/invoicemanager/change-data.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/change-data.fxml
@@ -63,9 +63,9 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="135.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="logoImage" fitHeight="150.0" fitWidth="200.0" layoutX="135.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@logo/seigan.jpg" />
+                              <Image url="@../../../../../../../../../invoiceManagerSource/logo/logo.png" />
                            </image>
                         </ImageView>
                         <Label layoutX="153.0" layoutY="14.0" text="Organization">
@@ -127,9 +127,9 @@
                               <Font name="System Bold" size="18.0" />
                            </font>
                         </Label>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="184.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="signatureImage" fitHeight="150.0" fitWidth="200.0" layoutX="184.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@logo/seigan.jpg" />
+                              <Image url="@../../../../../../../../../invoiceManagerSource/logo/signature.png" />
                            </image>
                         </ImageView>
                         <Pane fx:id="save" layoutX="20.0" layoutY="555.0" prefHeight="42.0" prefWidth="87.0" styleClass="tombol-primary">
