--- a/src/main/resources/com/andre/dojo/invoicemanager/hello-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/hello-view.fxml
@@ -107,7 +107,7 @@
                               <Image url="@icon/sun.png" />
                            </image>
                         </ImageView>
-                        <TextField layoutX="710.0" layoutY="13.0" prefHeight="39.0" prefWidth="212.0" promptText="Search..." styleClass="field-search" />
+                        <TextField fx:id="searchField" layoutX="710.0" layoutY="13.0" prefHeight="39.0" prefWidth="212.0" promptText="Search..." styleClass="field-search" />
                         <Label fx:id="tombolTanggal" alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="39.0" prefWidth="157.0" styleClass="top-label-active" text="29 Agustus 2024">
                            <font>
                               <Font size="15.0" />
@@ -122,7 +122,7 @@
                   </AnchorPane>
                   <Pane layoutY="77.0" prefHeight="613.0" prefWidth="978.0" styleClass="list-invoice">
                      <children>
-                        <Label layoutX="14.0" layoutY="17.0" text="Invoice for this month is ready to generate.">
+                        <Label fx:id="infoReady" layoutX="14.0" layoutY="17.0" text="Invoice for this month is ready to generate.">
                            <font>
                               <Font size="18.0" />
                            </font>
